src/Base/main/default/objects/Import_Adjustment_New__c/Import_Adjustment_New__c.object-meta.xml
<CustomObject>
    <label>Import Adjustment Value</label>
    <nameField>
        <displayFormat>IAV-{0000}</displayFormat>
        <label>Import Adjustment Value Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Adjustment Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>