src/Base/main/default/objects/Import_Adjustment_New__c/fields/Adjustable__c.field-meta.xml
<CustomField>
    <fullName>Adjustable__c</fullName>
    <formula>AND(Inventory_Product__c ,  !Serialized__c ,  !Lot_Tracked__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustable</label>
    <type>Checkbox</type>
</CustomField>