src/Base/main/default/objects/Import_Adjustment_New__c/fields/Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Amount__c</fullName>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>