src/Base/main/default/objects/Import_Adjustment_New__c/fields/Adjustment_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Unit_Cost__c</fullName>
    <formula>IF(Existing_Quantity__c &gt; 0, (( Adjustment_Amount__c +  Existing_Value__c ) /  Existing_Quantity__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>