src/Base/main/default/objects/Import_Adjustment_New__c/fields/Adjustment_Value_Per_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Value_Per_Quantity__c</fullName>
    <label>Adjustment Value Per Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>