src/Base/main/default/objects/Import_Adjustment_New__c/fields/Create_As_Non_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Create_As_Non_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create As Non Inventory</label>
    <type>Checkbox</type>
</CustomField>