src/Base/main/default/objects/Import_Adjustment_New__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 1</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Must be of Type GL Account Variable 1</errorMessage>
        <filterItems>
            <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
            <operation>equals</operation>
            <value>GL Account Variable 1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Import Adjustment Values</relationshipLabel>
    <relationshipName>Import_Adjustment_Values</relationshipName>
    <type>Lookup</type>
</CustomField>