src/Base/main/default/objects/Import_Adjustment_New__c/fields/Production_Description__c.field-meta.xml
<CustomField>
    <fullName>Production_Description__c</fullName>
    <label>Production Description</label>
    <type>TextArea</type>
</CustomField>