src/Base/main/default/objects/Import_Adjustment_New__c/listViews/Adjustable.listView-meta.xml
<ListView>
    <fullName>Adjustable</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Existing_Quantity__c</columns>
    <columns>Existing_Value__c</columns>
    <columns>Existing_Value_Per_Quantity__c</columns>
    <columns>Adjustment_Value_Per_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Adjustable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Adjusted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Adjustable</label>
</ListView>