src/Base/main/default/objects/Import_Adjustment_New__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adjustment_Amount__c</columns>
    <columns>Adjustment_Unit_Cost__c</columns>
    <columns>Existing_Value__c</columns>
    <columns>Existing_Quantity__c</columns>
    <columns>GL_Account_Variable_1__c</columns>
    <columns>GL_Account_Variable_2__c</columns>
    <columns>Import_Date__c</columns>
    <columns>Has_Inbound__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>